--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -394,6 +394,7 @@
 	box-shadow: inset 0 1px 0 #d6d6d6
 	background: #fff
 	position: fixed
+	z-index: 1000 
 	&__in
 		+clr
 	&__logo
